# ferrous-forge

./: .cargo-rdme.toml  .gitattributes  .gitignore  .versionguard.yml  API_INTEGRATION_DESIGN.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DOGFOODING.md  ENHANCED_SAFETY_PIPELINE.md  FEATURES.md  FEATURE_COMPLETION_ASSESSMENT.md  FEATURE_PLAN_RUST_VERSION_EDITION_MANAGEMENT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE-APACHE  LICENSE-MIT  MANIFEST.jsonl  NOTE.md  README.md  RELEASE.md  RELEASE_PLAN_v1.2.0.md  RELEASE_PLAN_v1.5.0.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  SECURITY.md  SESSION_23_KICKOFF_PROMPT.md  SESSION_27_SUMMARY.md  SESSION_HANDOFF.md  STANDARDS_COMPLIANCE_PLAN.md  VISION.md  clippy.toml  justfile  package-lock.json  rust-analyzer.toml  rustfmt.toml  test_safety_pipeline.rs  validation_start.txt
.cargo/: config.toml
.ferrous-forge/: config.toml
.ferrous-forge/ai-analysis/: ai_analysis_20250920_035526.json  ai_analysis_20250920_165729.json  orchestrator_instructions_20250920_035526.md  orchestrator_instructions_20250920_165729.md  orchestrator_instructions_20250921_161254.md
.ferrous-forge/reports/: ai_compliance_20250919_190820.json  ai_compliance_20250919_224543.json  ai_compliance_20250919_224543.md  ai_compliance_20250920_035441.json  ai_compliance_20250920_035441.md  ai_compliance_20250922_122619.json  ai_compliance_20250922_122619.md  ai_compliance_20260321_002918.json  ai_compliance_20260321_002918.md  latest_ai_report.md
.forge/: locked.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  update-packages.yml
api/: crates.js  help.html  search-index.js  settings.html  src-files.js
api/ferrous_forge/: all.html  constant.MIN_RUST_VERSION.html  index.html  (+3 more)
benches/: validation_bench.rs
docs/: ARCHITECTURE_DIAGRAM.md  CONFIG_TOML_SPECIFICATION.md  FIX_ASSESSMENT.md  Ferrous-Forge-README.md  Ferrous-Forge-Vision.md  RUSTDOC-STANDARDS.md  SESSION_9_SUMMARY.md  SESSION_9_VALIDATED_STATE_AND_ROADMAP.md  USER_STORIES.json  VIOLATION_FIX_FLOW.md  ci-setup.md  configuration.md  installation-guide.md  installation.md  integration.md  migration.md  standards.md  troubleshooting.md
project-docs/: TODO.json
project-tracking-template/: .gitignore  HANDOFF.md  README.md  SETUP_GUIDE.md  TODO.json  USER_STORIES.json  project-tracker
scripts/: ci-check.sh  test-published-crate.sh
src/: ai_analyzer.rs  cli.rs  config.rs  doc_coverage.rs  error.rs  formatting.rs  git_hooks.rs  lib.rs  main.rs  security.rs  standards.rs  templates.rs  test_coverage.rs  updater.rs  validation.rs
templates/: Cargo.toml.hbs  cargo-wrapper.sh  ci.yml.hbs  clippy.toml  lib.rs.hbs  main.rs.hbs  rustc-wrapper.sh
tests/: test_dogfooding.rs  test_safety_pipeline.rs
(+2365 files in other folders)
